--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example.maven-samples</groupId>
-  <artifactId>multi-module-parent</artifactId>
+  <artifactId>multi-module</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Multi Module Project Parent</name>
